# laba2

./: .gitignore  CMakeLists.txt  CellEditCommand.h  addremoverows.cpp  addremoverows.h  celleditcommand.cpp  contentwindow.cpp  contentwindow.h  infodialog.cpp  infodialog.h  infodialog.ui  loghandler.cpp  loghandler.h  main.cpp  mainwindow.cpp  mainwindow.h  positiveintdelegate.cpp  positiveintdelegate.h  resources.qrc
